--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,6 +5,11 @@
    .minh-100 {
     height: 80vh;
   }
+   #sidemenu{
+    position:fixed;
+   left:0;
+   z-index:1000;
+   }
     #messages-error{
     font-size:12px;
     color:red;
@@ -57,6 +62,13 @@
       border-radius:15px;
        
      }
+     #img-profile-publication{
+      width:45px;
+      height:45px;
+      border-radius:22.5px;
+  
+      text-align: center;
+     }
     @media screen and (max-width:800px ) {
        
     #botton-profile2{
@@ -70,6 +82,9 @@
         text-align: center;
         }
         .foto-user{
+          display:none;
+        }
+        #content-desktop{
           display:none;
         }
   }
