--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,11 +5,7 @@
    .minh-100 {
     height: 80vh;
   }
-   #sidemenu{
-    position:fixed;
-   left:0;
-   z-index:1000;
-   }
+ 
     #messages-error{
     font-size:12px;
     color:red;
@@ -87,4 +83,13 @@
         #content-desktop{
           display:none;
         }
+  }
+
+  @media (min-width: 1281px) {
+    #sidemenu{
+      position:fixed;
+     left:0;
+     z-index:1000;
+     }
+    
   }
